refactor AppTest with Files.readString